fixed home section white space

--- a/src/index.css
+++ b/src/index.css
@@ -126,7 +126,7 @@ nav > a {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 3rem;
+  /* gap: 3rem; */
   padding: 0 25%;
 }
 
